--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -64,7 +64,7 @@ outputs:
         script:
           - panoptes_aggregation --help
           - coverage run --source panoptes_aggregation --branch -m pytest --pyargs panoptes_aggregation -vv --color=yes --tb=long -k "not test_extract_csv_object_n2"
-          - coverage report --show-missing --skip-covered --fail-under=89
+          - coverage report --show-missing --skip-covered --fail-under=86
 
   - package:
       name: panoptes-aggregation-with-online
@@ -85,9 +85,12 @@ outputs:
         - panoptes-client >=1.6,<1.7
         - redis-python >=5,<6
         - requests >=2.28,<2.33
-        - sentry-sdk >=2.19,<2.20
         - setuptools >=75.8,<76.0
         - standard-imghdr >=3.13,<4.0
+        # below are deps of sentry-sdk[flask]
+        - sentry-sdk >=2.19,<2.20
+        - blinker >=1.1
+        - markupsafe
 
 
     tests:
