--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -83,7 +83,7 @@ outputs:
         - gunicorn >=20.0,<24.0
         - newrelic >=8.4.0,<10.4
         - panoptes-client >=1.6,<1.7
-        - redis-python >=5,<6
+        - redis-py >=5,<6
         - requests >=2.28,<2.33
         - setuptools >=75.8,<76.0
         - standard-imghdr >=3.13,<4.0
