--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -35,6 +35,7 @@ outputs:
       run:
         - beautifulsoup4 >=4.8.1,<4.13
         - collatex-python >=2.3,<2.4
+        - contourpy >=1.3.0,<1.4.0
         - lxml >=4.4,<5.4
         - numpy >=1.26.4,<2.3
         - packaging >=20.1,<24.3
@@ -47,6 +48,7 @@ outputs:
         - scikit-learn >=1.3.2,<1.7
         - scipy >=1.10.0
         - shapely >=2.0,<2.1
+        - shapelysmooth >=0.2.0,<1.0
         - werkzeug >=2.3.0,<3.2
     tests:
       - python:
