move tests to script, add skips

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -58,7 +58,10 @@ outputs:
       #       - ${{ python_min }}.*
       #     imports:
       #       - panoptes_aggregation
-      - requirements:
+      - files:
+          recipe:
+            - run_test.py
+        requirements:
           run:
             - pip
             - pytest
