--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -74,8 +74,7 @@ outputs:
         script:
           - pip check
           - panoptes_aggregation --help
-          - coverage run --source panoptes_aggregation --branch -m pytest --pyargs panoptes_aggregation -vv --color=yes --tb=long -k "not test_extract_csv_object_n2"
-          - coverage report --show-missing --skip-covered --fail-under=86
+          - python run_test.py
 
   - package:
       name: panoptes-aggregation-with-online
